# fullstack-todo

./: .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  package.json  pyproject.toml
.github/actions/setup_node/: action.yml
.github/actions/setup_python/: action.yml
.github/workflows/: composite_setup_python.yml  testing.yml
docker/api/: Dockerfile  Dockerfile.dev
docker/frontend/: Dockerfile  Dockerfile.dev
src/: index.tsx
src/fullstack_todo/: api.py  config.py
src/fullstack_todo/health/: views.py
src/fullstack_todo/plugins/base/: __init__.py  instance.py  manager.py
tests/: conftest.py
tests/health/: test_views.py
tests/plugins/base/: test_manager.py
