[tool.poetry]
name = "fullstack-todo"
version = "0.1.0"
description = ""
authors = ["Jakob Jul Elben <jelben@deloitte.dk>"]
packages = [{include = "fullstack_todo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
