[tool.poetry]
name = "fullstack-todo"
version = "0.1.0"
description = ""
authors = ["Jakob Jul Elben <jelben@deloitte.dk>"]
packages = [{include = "fullstack_todo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"
isort = "^5.9.3"
flake8 = "^4.0.1"
requests = "^2.26.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
